move to Java 11 & code cleanup